--- a/index.html
+++ b/index.html
@@ -598,6 +598,10 @@
 	      		
 	      </div>
 
+	      	<div id="go-top">
+		         <a class="smoothscroll" title="Back to Top" href="#top"><i class="fa fa-long-arrow-up"></i></a>
+		      </div>
+
       	</div> <!-- /row -->     	
    </footer>  
 
