--- a/index.html
+++ b/index.html
@@ -287,11 +287,11 @@
 
 	         	<div class="bgrid folio-item">
 	               <div class="item-wrap">
-	               	<img src="images/portfolio/liberty.jpg" alt="Liberty">
+	               	<img src="images/portfolio/BEN.png" alt="Ben & Frank">
 	                  <a href="#modal-01" class="overlay">	                  	           
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
-		     					       <h3 class="folio-title">Liberty</h3>	     					    
+		     					       <h3 class="folio-title">Ben & Frank</h3>	     					    
 		     					    	 <span class="folio-types">
 		     					       	  Graphic Design
 		     					       </span>
