--- a/index.html
+++ b/index.html
@@ -287,13 +287,13 @@
 
 	         	<div class="bgrid folio-item">
 	               <div class="item-wrap">
-	               	<img src="images/portfolio/BEN.png" alt="Ben & Frank">
+	               	<img src="images/portfolio/ben.jpg" alt="Ben & Frank">
 	                  <a href="#modal-01" class="overlay">	                  	           
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
 		     					       <h3 class="folio-title">Ben & Frank</h3>	     					    
 		     					    	 <span class="folio-types">
-		     					       	  Graphic Design
+		     					       	  Graphic
 		     					       </span>
 		     					   </div>	                      	
 	                     </div>                    
@@ -386,7 +386,7 @@
 	            <div id="modal-01" class="popup-modal slider mfp-hide">	
 
 				     	<div class="media">
-				     		<img src="images/portfolio/modals/m-BEN.png" alt="" />
+				     		<img src="images/portfolio/modals/m-ben.jpg" alt="" />
 				     	</div>      	
 
 					   <div class="description-box">
