--- a/index.html
+++ b/index.html
@@ -291,9 +291,9 @@
 	                  <a href="#modal-01" class="overlay">	                  	           
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
-		     					       <h3 class="folio-title">Ben & Frank</h3>	     					    
+		     					       <h3 class="folio-title">Data Analysis</h3>	     					    
 		     					    	 <span class="folio-types">
-		     					       	  Graphic
+		     					       	  ETL
 		     					       </span>
 		     					   </div>	                      	
 	                     </div>                    
