--- a/index.html
+++ b/index.html
@@ -390,10 +390,12 @@
 				     	</div>      	
 
 					   <div class="description-box">
-					      <h4>Liberty</h4>		      
-					      <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
+					      <h4>Overview</h4>		      
+					      <p>In this project we perform some analysis making an exploratory data analysis and show the visualizations with Tableau. <br>
+						   This project shows how to determine how to measure which days of the week and the weekend are sold the most per store. <br>
+						   We also find which stores has the most peak hours</p>
 
-					      <div class="categories">Web Development</div>			               
+					      <div class="categories">Data Analysis / Business Intelligence
 					   </div>
 
 			         <div class="link-box">
