--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
 
 	         	<div class="bgrid folio-item">
 	               <div class="item-wrap">
-	               	<img src="images/portfolio/ben.jpg" alt="Ben & Frank">
+	               	<img src="images/portfolio/ben1.jpg" alt="Ben & Frank">
 	                  <a href="#modal-01" class="overlay">	                  	           
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
