--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 	   					<h4>Aprueba IPN</h4>
 	   					<p>Aprueba IPN are courses to prepare young people for their admission test at the High School and College and also offers a mentorship for students that are in their career and looks for a mentor to teach him some advanced topics in specific areas of knowledge.
 						<br></br>
-						<a href="https://www.apruebapa.com" target="_blank">Discover ApruebaIPN</a><li><a href="https://www.facebook.com/apruebaipn/" target="_blank"><i class="fa fa-facebook"></i></a></li>
+						<a href="https://www.facebook.com/apruebaipn" target="_blank">Discover ApruebaIPN</a><li><a href="https://www.facebook.com/apruebaipn/" target="_blank"><i class="fa fa-facebook"></i></a></li>
 						   </p>
 	   				</div>
 
