--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
 					   </div>
 
 			         <div class="link-box">
-			            <a href="https://dannie-ml.github.io/Ben-Frank/">Details</a>
+			            <a href="https://dannie-ml.github.io/Ben-Frank/" target="_blank">Details</a>
 					      <a href="#" class="popup-modal-dismiss">Close</a>
 			         </div>		      
 
